fixed issue with collage board menu collapse button rotatingon hover

--- a/app/stylesheets/collage-board.scss
+++ b/app/stylesheets/collage-board.scss
@@ -106,11 +106,17 @@
 		svg {
 			transform: rotateZ(90deg);
 		}
+
+		&:hover {
+			svg {
+				transform: rotateZ(90deg);
+			}
+		}
 	}
 
 	&:hover {
 		svg {
-			transform: none;
+			transform: rotateZ(-90deg);
 
 			g, path {
 				fill: $lightBlue;
